--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
-    "react-responsive-carousel": "^3.2.23",
-    "supports-color": "^9.4.0"
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "@types/node": "^20",
